# ros2_leo_ws

./: .gitignore  bridge_config.yaml  bringup_gazebo_slam_and_nav.rviz  frames.gv
bags/test_map_bag/: metadata.yaml
bags/test_map_bag2/: metadata.yaml
frontiers_bag/: frontiers_bag_0.db3  metadata.yaml
install/: setup.sh
log/: latest_build
rosbag2_2026_04_10-11_41_18/: metadata.yaml  rosbag2_2026_04_10-11_41_18_0.db3
rosbag2_2026_04_10-14_17_40/: metadata.yaml
src/: extracted_map.pgm  filtered_map.pgm
src/leo_bringup/: setup.py
src/leo_bringup/launch/: jetson_full.launch.py  jetson_full.py  jetson_full_exp.launch.py  laptop_full.launch.py  laptop_full.py  laptop_sim.launch.py  laptop_viz.launch.py  laptop_viz.py  real_bringup_launch.py  sim_testing.launch.py
src/leo_bringup/rviz/: real_launch_rviz.rviz
src/leo_description/: CMakeLists.txt  package.xml
src/leo_description/description/: chassis.xacro  gazebo_materials.xacro  leo.xacro  leo_sim.xacro  lidar.xacro  wheels.xacro
src/leo_description/launch/: real.launch.py
src/leo_exploration/: CMakeLists.txt  package.xml
src/leo_exploration/launch/: exploration.launch.py  exploration_sim.launch.py
src/leo_exploration/msg/: FrontierCluster.msg  FrontierClusters.msg
src/leo_exploration/src/: exploration_termination.cpp  frontier_detector.cpp  frontier_explorer.cpp  manual_exploration.cpp  rss.cpp  rss_sim.cpp
src/leo_gazebo/: CMakeLists.txt
src/leo_gazebo/launch/: leo_gazebo_launch.py
src/leo_gazebo/worlds/: Big_world_test.world  World_for_testing.world  World_for_testing_2.world  house_bigger_test.world  house_extended_test.world  starting_pos.txt  test_wordl_from_image.world
src/leo_nav2/config/: nav2_params.yaml  nav2_params_sim.yaml
src/leo_nav2/launch/: nav2_launch.py  nav2_launch_sim.py
src/leo_slam/config/: mapper_params_online_async.yaml
src/leo_slam/launch/: slam_launch.py
src/leo_teleop/: CMakeLists.txt
src/leo_teleop/config/: xbox.config.yaml  xbox_jetson.config.yaml
src/leo_teleop/launch/: controller_teleop.launch.py
src/leo_teleop/src/: leo_mode.cpp
src/leo_utils/: CMakeLists.txt  package.xml
src/leo_utils/scripts/: automated_testing.py  bag_analysis.py  check_combinations.py  clustering_test.py  csv_extraction.py  frontier_bag_extract.py  gao_progression.npy  gao_progression_meta.json  map_filter.py  map_filter_test.py  map_vis.py  odom2TF.py  plot_progression.py  progression_data_extraction.py  progression_results.py  progression_results_real.py  quick_bag_analysis.py  quick_session_analysis.py  recorder.py  recorder_real.py  rss_1_progression.npy  rss_1_progression_meta.json  rss_2_progression.npy  rss_2_progression_meta.json  rss_3_progression.npy  rss_3_progression_meta.json  rss_4_progression.npy  rss_4_progression_meta.json  rss_progression.npy  rss_progression_meta.json  scan_filter.py  session_analysis.py  session_analysis_real.py  session_gao_progression.npy  session_gao_progression_meta.json  session_rss_1_progression.npy  session_rss_1_progression_meta.json  session_rss_2_progression.npy  session_rss_2_progression_meta.json  session_rss_3_progression.npy  (+9 more)
src/leo_velodyne/: package.xml  setup.cfg  setup.py
src/leo_velodyne/config/: VLP16-velodyne_convert_node-params.yaml
src/leo_velodyne/launch/: velodyne.launch.py
test_map_bag/: test_map_bag_0.db3
test_map_bag2/: test_map_bag2_0.db3
